// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/pipenv/extract extractPackageFile() extracts dependencies 1`] = `
{
  "constraints": {
    "python": "== 3.6.*",
  },
  "deps": [
    {
      "currentValue": "==0.3.1",
      "datasource": "pypi",
      "depName": "some-package",
      "depType": "packages",
      "managerData": {},
    },
    {
      "currentValue": "==1.0.0",
      "datasource": "pypi",
      "depName": "some-other-package",
      "depType": "packages",
      "managerData": {},
    },
    {
      "currentValue": "==1.0.0",
      "depName": "_invalid-package",
      "depType": "packages",
      "managerData": {},
      "skipReason": "invalid-name",
    },
    {
      "currentValue": "==0 0",
      "depName": "invalid-version",
      "depType": "packages",
      "managerData": {},
      "skipReason": "invalid-version",
    },
    {
      "currentValue": "==1.0.0",
      "datasource": "pypi",
      "depName": "pytest-benchmark",
      "depType": "packages",
      "managerData": {
        "nestedVersion": true,
      },
    },
    {
      "currentValue": "==0.1.0",
      "datasource": "pypi",
      "depName": "dev-package",
      "depType": "dev-packages",
      "managerData": {},
    },
  ],
  "lockFiles": [
    "Pipfile.lock",
  ],
  "registryUrls": [
    "https://pypi.org/simple",
    "http://example.com/private-pypi/",
  ],
}
`;

exports[`modules/manager/pipenv/extract extractPackageFile() extracts example pipfile 1`] = `
{
  "constraints": {
    "python": "== 2.7.*",
  },
  "deps": [
    {
      "depName": "requests",
      "depType": "packages",
      "managerData": {},
      "skipReason": "any-version",
    },
    {
      "currentValue": ">0.5.0",
      "datasource": "pypi",
      "depName": "records",
      "depType": "packages",
      "managerData": {},
    },
    {
      "depName": "django",
      "depType": "packages",
      "managerData": {},
      "skipReason": "git-dependency",
    },
    {
      "depName": "e682b37",
      "depType": "packages",
      "managerData": {},
      "skipReason": "file-dependency",
    },
    {
      "depName": "e1839a8",
      "depType": "packages",
      "managerData": {},
      "skipReason": "local-dependency",
    },
    {
      "currentValue": "*",
      "depName": "pywinusb",
      "depType": "packages",
      "managerData": {
        "nestedVersion": true,
      },
      "registryUrls": [
        "https://pypi.python.org/simple",
      ],
      "skipReason": "any-version",
    },
    {
      "currentValue": "*",
      "depName": "nose",
      "depType": "dev-packages",
      "managerData": {},
      "skipReason": "any-version",
    },
    {
      "currentValue": ">=1.0,<3.0",
      "datasource": "pypi",
      "depName": "unittest2",
      "depType": "dev-packages",
      "managerData": {
        "nestedVersion": true,
      },
    },
  ],
  "lockFiles": [
    "Pipfile.lock",
  ],
  "registryUrls": [
    "https://pypi.python.org/simple",
  ],
}
`;

exports[`modules/manager/pipenv/extract extractPackageFile() extracts multiple dependencies 1`] = `
{
  "constraints": {
    "python": "== 3.6.*",
  },
  "deps": [
    {
      "currentValue": "==1",
      "datasource": "pypi",
      "depName": "Django",
      "depType": "packages",
      "managerData": {},
    },
    {
      "currentValue": "==0.6.27",
      "datasource": "pypi",
      "depName": "distribute",
      "depType": "packages",
      "managerData": {},
    },
    {
      "currentValue": "==0.2",
      "datasource": "pypi",
      "depName": "dj-database-url",
      "depType": "packages",
      "managerData": {},
    },
    {
      "currentValue": "==2.4.5",
      "datasource": "pypi",
      "depName": "psycopg2",
      "depType": "packages",
      "managerData": {},
    },
    {
      "currentValue": "==0.1.2",
      "datasource": "pypi",
      "depName": "wsgiref",
      "depType": "packages",
      "managerData": {},
    },
  ],
  "lockFiles": [
    "Pipfile.lock",
  ],
  "registryUrls": [
    "https://pypi.org/simple",
  ],
}
`;

exports[`modules/manager/pipenv/extract extractPackageFile() supports custom index 1`] = `
{
  "constraints": {},
  "deps": [
    {
      "currentValue": "==0.21.0",
      "datasource": "pypi",
      "depName": "requests",
      "depType": "packages",
      "managerData": {
        "nestedVersion": true,
      },
      "registryUrls": [
        "https://testpypi.python.org/pypi",
      ],
    },
  ],
  "lockFiles": [
    "Pipfile.lock",
  ],
  "registryUrls": [
    "https://pypi.python.org/simple",
    "https://testpypi.python.org/pypi",
  ],
}
`;
